--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   provider: ^6.1.2
   shared_preferences: ^2.2.2
-  intl: ^0.20.2
+  intl: 0.20.2
   image_picker: ^1.0.5
   flutter_localizations:
     sdk: flutter
