--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ ios/Runner/GeneratedPluginRegistrant.*
 android/app/debug/
 android/app/profile/
 android/app/release/
+
+# Generated localization files
+lib/l10n/app_localizations*.dart
