--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -11,7 +11,7 @@ jobs:
         runs-on: ubuntu-latest
 
         env: 
-            API_URL: https://fertipath.onrender.com
+            API_URL: https://fertipath-backend.onrender.com
         steps:
             - name: Checkout code
               uses: actions/checkout@v6
