--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -46,15 +46,18 @@ jobs:
             - name: Accept Android licenses
               run: yes | flutter doctor --android-licenses
 
+            - name: Create Firebase credentials file
+              run: echo "$FIREBASE_CREDENTIALS" > firebase_credentials.json
+
             - name: Build APK
-              run: flutter build apk --release --dart-define=API_URL=$API_URL --dart-define=FIREBASE_CREDENTIALS=$FIREBASE_CREDENTIALS
+              run: flutter build apk --release --dart-define=API_URL=$API_URL 
             - name: Upload APK artifact
               uses: actions/upload-artifact@v4
               with:
                 name: app-release-apk
                 path: build/app/outputs/flutter-apk/app-release.apk
             - name: Build App Bundle
-              run: flutter build appbundle --release --dart-define=API_URL=$API_URL --dart-define=FIREBASE_CREDENTIALS=$FIREBASE_CREDENTIALS
+              run: flutter build appbundle --release --dart-define=API_URL=$API_URL 
             - name: Upload App Bundle artifact
               uses: actions/upload-artifact@v4
               with:
@@ -77,7 +80,10 @@ jobs:
                 flutter-version: '3.38.0'
                 channel: stable
             - name: Accept iOS licenses
-              run: yes | xcodebuild -license accept
+              run: sudo xcodebuild -license accept || true
+
+            - name: Create Firebase credentials file
+              run: echo "$FIREBASE_CREDENTIALS" > firebase_credentials.json
             - name: Install dependencies
               run: flutter pub get
 
@@ -90,7 +96,7 @@ jobs:
                 name: coverage-ios
                 path: coverage/lcov.info
             - name: Build iOS app
-              run: flutter build ios --release --no-codesign --dart-define=API_URL=$API_URL --dart-define=FIREBASE_CREDENTIALS=$FIREBASE_CREDENTIALS
+              run: flutter build ios --release --no-codesign --dart-define=API_URL=$API_URL 
             - name: Upload iOS app artifact
               uses: actions/upload-artifact@v4
               with:
